apps/shinobi/manifests/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: shinobi-service
spec:
  selector:
    app: shinobi
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
