apps/shinobi/manifests/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: shinobi-ingress
  annotations:
    nginx.ingress.kubernetes.io/proxy-body-size: "0" # Allows heavy camera data streams
spec:
  ingressClassName: public
  rules:
  - host: shinobi.local # map this to your public domain
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: shinobi-service
            port:
              number: 8080
